--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ ebean.db.ddl.run=false
 
 datasource.db.username=sa
 datasource.db.password=
-datasource.db.databaseUrl=jdbc:h2:mem:tests
+datasource.db.databaseUrl=jdbc:h2:file:./super_db
 datasource.db.databaseDriver=org.h2.Driver
